> [THE PROJECT] Removed the use of configure.py - bkp in modules/not_used
> [THE PROJECT] Renamed wrapper script to tool



> [FILE:create_map.py] Fixed bug related to:
    File "/home/hbazure/drive/Docs/Map2Check/Map2Check/modules/map2check/generate_map/create_map.py", line 1596, in expand_decl
    return ['ArrayDecl', dimval, decl.dim_quals, nested]

> [FILE:write_new_instance.py] Fixed bug related to:
   Status: UNKNOW
   ERROR - Generating test cases and new program instance
   :: When we have int *x; in global scode, then is generated MAP_GB_VAR_FORTES();, but no has that function cuz
      the pointer mapped only in the first assignment
   SOLVED: Added the code "if 0 in self.map_is_global2map and 0 in self.map_id_func2map:" at line 1046






> [THE PROJECT] Updating readme file
> [THE PROJECT] Thinking how avoid the tool execution if we have necessary packages not installed


> [THE PROJECT] Dealing with alloc C function. The actual project status generates false positives cuz the alloc function
    :: HIP1: Adding a filed in mapping to identify what is the allocation function adopted, this way we can write a correct
            leak asssertion to.

> [THE PROJECT] Creating an analysis to improve the use of __VERIFIER_nondet_int(). E.g., in cstrncat_alloc.c
    is adopted to determine the size of array
    ::HIP1: Creating a static analysis to determine what kid of __VERIFIER_nondet_int() should be, such as:
            (1) 0 or 1 to whiles and fors, or
            (2) the array size os vars







> [THE PROJECT] TODO: install test in diferent PCs
> [THE PROJECT] Checking ESBMC cuz this apt-get install libc6-dev-i386

> [FILE:create_map.py] Otimizing the time execution of args parse. The average time is 0.5s (this maybe is high)

> [FILE:create_map.py] TODO: Analyzing print in the trace log about arrays
        :: Data: in this Decl int z[4]={2,6,1,9}; is presented in the trace z = 2; :(